Bugfixes (#50)